--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ aws-smithy-types-convert = { version = "0.54.4", features = ["convert-chrono"] }
 chrono = "0.4.24"
 futures = "0.3.27"
 tabled = "0.10.0"
+clap = { version = "4.1.9", features = ["derive"] }
